--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="preload" href="../src/components/fonts/CinzelRegular.ttf">
+  <link rel="preload" href="../src/components/fonts/Code.otf">
+  <meta name="description" content="A site for learning and practicing algorithms" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>AlgoLab</title>
 </head>
